Fixed textwrap causing broken UI

--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ body {
 
 #header {
     text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 #vert_hor_switcher {
